--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2 style="font-size:60px; color:red;">HTML Links</h2>
+<h2 style="font-size:60px; color:red">HTML Links</h2>
 <p>HTML links are defined with the a tag:</p>
 
 <a href="https://www.naver.com">Go Naver</a>
