--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 
 <h2 style="font-size:60px; color:red">HTML Links</h2>
 <p>HTML links are defined with the a tag:</p>
+<p>링크 : 인터넷 홈페이지에서, 지정하는 파일이나 문자열로 이동할 수 있도록 걸어 놓은 홈페이지 간의 관련. </p>
 
 <a href="https://www.naver.com">Go Naver</a>
 
